Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,3 +18,8 @@ a:hover,a:focus {
 .imageline img {
 	width: 100%;
 }
+
+.oneline {
+  line-height: 10px;
+}
+
